[package]
name = "crowdfunding"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.1-preview.3"
wasm-bindgen = "0.2.73"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.1-preview.3", features = ["testutils"] }
